# HSS

./: .gitmodules  Arduino  README.md
1.Documents/: Android Push Condition.xlsx  HSS_Screen_Flow.asta  HSS_Screen_Flow.xlsx  RPC.xlsx  Sensors Test Case.docx  Sensors.docx  Sensors_________.docx  UseCase.docx  ~$nsors Test Case.docx
2.SourceCode/Adruino/: README.md
2.SourceCode/Adruino/Arduino First Step/: README.md  main.ino
2.SourceCode/Adruino/Arduino First Step/main/: main.ino
2.SourceCode/Adruino/HSSAdruino/: HSSAdr.cbp  HSSAdr.depend  HSSAdr.ino  HSSAdr.layout  HSSConstant.h  HSSSensor.c  HSSSensor.h
2.SourceCode/Adruino/HSSAdruino/ConnectionLayer/: ConnectionLayer.c  ConnectionLayer.h  RPCServer.c  RPCServer.h
2.SourceCode/Android/GUI/: ActivitylogScreen.qml  CameraScreen.qml  DoorbellScreen.qml  HSSGUI.pro  LoginScreen.qml  MainScreen.qml  SettingScreen.qml  activitylogScr.qml  cameraScr.qml  changePass.qml  doorbellScr.qml  homeScreen.qml  hssengine.cpp  hssengine.h  loginScr.qml  main.cpp  main.qml  qml.qrc  settingScr.qml
2.SourceCode/Android/GUI/Connection/: connectionbase.cpp  rpc_pr.cpp
2.SourceCode/Android/GUI/Engine/: hssengine.cpp  hssengine.h
2.SourceCode/Android/GUI/Screen/: ActivitylogScreen.qml  CameraAloneScreen.qml  CameraScreen.qml  ChangePass.qml  DoorbellScreen.qml  FirstScreen.qml  LoginScreen.qml  MainScreen.qml  SettingScreen.qml
2.SourceCode/Android/GUI/ScreenManager/: ScreenDefine.h  ScreenManager.cpp  ScreenManager.h
2.SourceCode/Android/HSS/: HSS.pro  img.qrc  main.cpp  main.qml  qml.qrc
2.SourceCode/Android/HSS-Client/: HSS_Client.pro  main.qml
2.SourceCode/Android/HSS-Client/android/: AndroidManifest.xml
2.SourceCode/Android/HSS/Component/: HSS_Button.qml  HSS_CameraView.qml  ScreenBase.qml
2.SourceCode/Android/HSS/Connection/: connectionbase.cpp  connectionbase.h  rpc_pr.cpp
2.SourceCode/Android/HSS/Engine/: applicationactivatefilter.cpp  applicationactivatefilter.h  hssdata.cpp  hssdata.h  hssengine.cpp  hssengine.h  hsseventfilter.cpp  hsseventfilter.h
2.SourceCode/Android/HSS/Screen/: ActivitylogScreen.qml  CameraAloneScreen.qml  CameraExitScreen.qml  CameraScreen.qml  ChangePass.qml  DoorbellScreen.qml  FirstScreen.qml  LoginScreen.qml  MainScreen.qml  SettingScreen.qml
2.SourceCode/Android/HSS/ScreenManager/: ScreenDefine.h  ScreenManager.cpp  ScreenManager.h  activitylistmodel.cpp  activitylistmodel.h  cameralistmodel.cpp  cameralistmodel.h
2.SourceCode/Android/HSS/android/: AndroidManifest.xml  gradle.properties  gradle.properties~  local.properties  local.properties~
2.SourceCode/Android/HSSConnection/: HSSConnection.pro  main.cpp  rpc_pr.cpp  rpc_pr.h
2.SourceCode/Android/HSSConnection/Connection/: connectionbase.h
2.SourceCode/Android/HSSConnection/ConnectionLayer/: ConnectionLayer.cpp  ConnectionLayer.h  RPCClientBase.cpp  RPCClientBase.h
2.SourceCode/Android/HSSConnection/Engine/: piengine.cpp  piengine.h
2.SourceCode/Android/HSS_Browser/: main.qml
2.SourceCode/Android/HSS_Onscreen/: HSS_Onscr.qml  HSS_Onscreen.pro  main.cpp  main.qml  qml.qrc
2.SourceCode/Android/HSS_Onscreen/Engine/: hssengine.cpp  hssengine.h
2.SourceCode/Android/HSS_Onscreen/android/: gradle.properties  gradle.properties~  local.properties  local.properties~
2.SourceCode/Android/HSS_Push/: HSS_Push.pro  main.cpp  main.qml
2.SourceCode/Android/HSS_Push/android/: gradle.properties  gradle.properties~  local.properties  local.properties~
2.SourceCode/Android/HSS_VoIP/: HSS_VoIP.pro  engine.cpp  engine.h  main.cpp  main.qml
2.SourceCode/Android/HSS_VoIP/android/: AndroidManifest.xml  build.gradle  gradle.properties  gradle.properties~  local.properties  local.properties~
2.SourceCode/Pi/: CameraDB.sql  README.md  UserDB.sql  activityDB.sql  test.py
2.SourceCode/Pi/HSS/: CMakeLists.txt  HSS.sqlite  README  hss_global.cpp  hss_global.h  main.cpp  rpc_pr.cpp  setting.ini  setting.json
2.SourceCode/Pi/HSS/Connection/: connectionbase.cpp  connectionbase.h  hsspushable.cpp  hsspushable.h  serialconnection.cpp  serialconnection.h  tcpconnection.cpp  tcpconnection.h
2.SourceCode/Pi/HSS/ConnectionLayer/: RPCClientBase.h  SerialConnectionLayer.cpp  SerialConnectionLayer.h  TcpConnectionLayer.cpp  TcpConnectionLayer.h  TcpRPCServer.cpp  TcpRPCServer.h
2.SourceCode/Pi/HSS/ConnectionLayer/RPC_Auto/: RPCClient.h  TcpRPCServerFunc.cpp
2.SourceCode/Pi/HSS/ConnectionLayer/RPC_Base/: ConnectionLayerBase.cpp  ConnectionLayerBase.h  RPCClientBase.cpp  RPCClientBase.h  RPCServerBase.h
2.SourceCode/Pi/HSS/ConnectionLayer/RPC_Client/: TcpRPCClient.cpp  TcpRPCClient.h
2.SourceCode/Pi/HSS/ConnectionLayer/RPC_Server/: SerialRPCServerMega.cpp  SerialRPCServerMega.h  SerialRPCServerUno.cpp  SerialRPCServerUno.h  TcpRPCServer.cpp  TcpRPCServer.h
2.SourceCode/Pi/HSS/Database/: hssdatabase.cpp  hssdatabase.h
2.SourceCode/Pi/HSS/Engine/: androidengine.cpp  androidengine.h  arduinoengine.cpp  arduinoengine.h  hsscamera.cpp  hsscamera.h
2.SourceCode/Pi/HSS/Setting/: setting.cpp  setting.h
2.SourceCode/Pi/HSS_6/HSS/: CMakeLists.txt  HSS.sqlite  README  (+5 more)
2.SourceCode/Pi/HSS_Gstreamer/: stream.sh
2.SourceCode/Pi/HSS_PushServer/: CMakeLists.txt  README  hsspushable.cpp  hsspushable.h  main.cpp
2.SourceCode/Pi/HSS_VoIP/: CMakeLists.txt  README  main.cpp
2.SourceCode/Pi/HSS_VoIP/PiClient/: linphone.py  test2.py
2.SourceCode/Pi/plainClient/: CMakeLists.txt  main.cpp
2.SourceCode/Pi/plainServer/: CMakeLists.txt  main.cpp
3.Report/: Chapter 1. Introduction.docx  Chapter 2. Project Management Plan.docx  Chapter 3. SRS.docx  Diep.pptx  Final 5.5.pptx  Final Slide.pptx  Final.pptx  Sensors.docx
DEmo/: jmyfyjf.qml  qml.qrc
(+27 files in other folders)
